# objcog_db

./: .gitignore  CMakeLists.txt  README
cmake/: FindPCL.cmake
design/: main.tex  needs.tex
doc/: Doxyfile  Doxyfile.in  README
include/objcog/db/: Session.hpp  client.hpp  couch.hpp  cv.hpp  db.h  document.hpp  observation.h
old/: CMakeLists.txt  client.hpp  couch_surfing.cpp  cv.cpp  cv.h  cv.hpp  document.cpp  mongodb.cpp  observation.h  pywrap.cpp  simple_test.cpp
python/: bag_dumper.py  db_play.py  document.py  insert_images.py  lock_and_load.py  object_db.py  test.py
src/: CMakeLists.txt  client.cpp  common_inserts.cpp  couch.cpp  couchdb.cpp  cv.cpp  pywrap.cpp
test/: couch_surfing.cpp  mat_test.cpp  simple_test.cpp
testing/: couch_surfing.cpp
